--- a/index.css
+++ b/index.css
@@ -427,7 +427,7 @@ button.carousel-control-prev {
 button.carousel-control-next {
     width: 55px;
     height: 55px;
-    margin: 250px 0 250px 55px;
+    margin: 250px 55px 250px 0;
     border: 1px solid;
     border-radius: 50%;
     background-color: #111111;
